[metadata]
name = regulome_infrastructure
version = 1.0.0
description = Reusable or common CDK pieces
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RegulomeDB/regulome-infrastructure
project_urls =
    Bug Tracker = https://github.com/RegulomeDB/regulome-infrastructure/issues

[options]
package_dir =
    = src
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.9
install_requires =
    aws-cdk-lib>=2.88.0
    constructs>=10.0.0,<11.0.0

[options.extras_require]
test =
    pytest==6.2.5
    mypy==1.5.1

[options.packages.find]
where = src

[options.package_data]
regulome_infrastructure = py.typed
